# HealthHandler

./: Cargo.toml  README.md  build.sh
examples/: actix_web.rs  axum.rs
src/: health.rs  health_dependency.rs  lib.rs
