[package]
name = "health-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"]}
sysinfo = "0.30.5"


[profile.dev]
panic = "abort"

[dev-dependencies]
tokio = "1.35.1"
tokio-test = "0.4.3"
axum = "0.7.4"
axum-test = "14.2.2"