[package]
name = "health-handler"
version = "0.1.9"
edition = "2021"
description = "Health handler for microservices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"]}
sysinfo = "0.30.5"
scheduled-executor = "0.4.0"


[profile.dev]
panic = "abort"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

tokio-test = "0.4.3"
axum = "0.7.4"
axum-test = "14.2.2"
actix-web = "4.4.0"
lazy_static = "1.4.0"

## Examples
[[example]]
name = "actix_web"
crate-type = ["bin"]

[[example]]
name = "axum"
crate-type = ["bin"]

